--- a/css/components/page.css
+++ b/css/components/page.css
@@ -15,6 +15,7 @@
 }
 
 .body {
+  width: 100%;
   display: flex;
   flex-direction: row;
   padding-top: 1rem;
